# NextFight

./: .editorconfig  .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/migrations/: README.md  env.py
backend/migrations/versions/: 450057107163_add_reliable_push_delivery_queue.py  5dd3800faa24_add_favorites_and_alert_uniqueness.py  72b981c290e7_add_identity_sessions.py  cdafc122160f_add_transactional_outbox.py  da8dd76f43b0_create_initial_domain_schema.py  df3648481911_add_monitoring_idempotency.py
backend/src/nextfight/: __init__.py  main.py
backend/src/nextfight/api/: router.py
backend/src/nextfight/core/: application.py  config.py  logging.py
backend/src/nextfight/core/errors/: __init__.py  handlers.py
backend/src/nextfight/core/middleware/: rate_limit.py  request_id.py
backend/src/nextfight/infrastructure/cache/: __init__.py  client.py
backend/src/nextfight/infrastructure/database/: __init__.py  dependencies.py  entities.py  models.py  repository.py  session.py
backend/src/nextfight/infrastructure/email/: __init__.py  smtp.py
backend/src/nextfight/modules/: __init__.py
backend/src/nextfight/modules/admin/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  test_admin_api.py  test_engagement_api.py  test_events_api.py  test_health.py  test_identity_api.py  test_lead_time_scheduler.py  test_monitoring_service.py  test_rate_limit.py  test_repository.py
backend/tests/unit/: __init__.py  test_authorization.py  test_config.py  test_email.py  test_errors.py  test_infrastructure.py  test_monitoring_domain.py  test_notifications.py  test_realtime_topics.py  test_request_id.py  test_security.py
(+141 files in other folders)
