[project]
name = "nextfight-backend"
version = "0.1.0"
description = "NextFight modular monolith backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "email-validator>=2.3.0",
  "fastapi>=0.116,<1",
  "firebase-admin>=7,<8",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.10,<3",
  "pyjwt>=2.13.0",
  "redis[hiredis]>=6.2,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "freezegun>=1.5.5",
  "httpx>=0.28,<1",
  "pyright>=1.1.403,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextfight"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=nextfight --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires PostgreSQL and Redis",
]

[tool.coverage.run]
branch = true
source = ["nextfight"]
concurrency = ["greenlet"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
